# sf-skills

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: whitepaper-agentic-agent-lifecycle.html  whitepaper-agentic-agent-lifecycle.md
scripts/: create-release.sh
shared/: repo-knowledge.md  update_repo_knowledge.py
shared/code_analyzer/: live_query_plan.py  scanner.py
shared/hooks/: README.md  skills-registry.json
skills/sf-ai-agentforce/: CREDITS.md  README.md  SKILL.md
skills/sf-ai-agentforce-conversationdesign/: SKILL.md
skills/sf-ai-agentforce-persona/: SKILL.md
skills/sf-ai-agentforce-testing/: README.md  SKILL.md
skills/sf-ai-agentscript/: CREDITS.md  README.md  SKILL.md
skills/sf-apex/: README.md  SKILL.md
skills/sf-connected-apps/: SKILL.md
skills/sf-data/: CREDITS.md  README.md
skills/sf-datacloud/: UPSTREAM.md
skills/sf-datacloud-connect/: README.md  SKILL.md
skills/sf-datacloud-prepare/: README.md  SKILL.md
skills/sf-debug/: README.md  SKILL.md
skills/sf-deploy/: CREDITS.md  README.md  SKILL.md
skills/sf-diagram-mermaid/: README.md
skills/sf-diagram-nanobananapro/: README.md
skills/sf-docs/: README.md  SKILL.md
skills/sf-flow/: README.md  SKILL.md
skills/sf-industries-callable-apex/: CREDITS.md  README.md  SKILL.md
skills/sf-industry-commoncore-datamapper/: CREDITS.md
skills/sf-industry-commoncore-omnistudio-analyze/: SKILL.md
skills/sf-integration/: README.md  SKILL.md
skills/sf-lwc/: README.md  SKILL.md
skills/sf-metadata/: CREDITS.md  README.md  SKILL.md
skills/sf-permissions/: SKILL.md
skills/sf-soql/: README.md  SKILL.md
skills/sf-testing/: README.md  SKILL.md
tests/: datacloud_test_utils.py  test_datacloud_registry_contracts.py  test_datacloud_runtime_integration.py  test_datacloud_skill_contracts.py  test_install_datacloud_runtime.py  test_install_hooks_config.py  test_skill_registry_contracts.py
tools/: README.md  install.py  install.sh
(+131 files in other folders)
